--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 15%;
+    width: 200px;
     height: 100%;
     position: fixed;
     overflow: auto;
@@ -12,7 +12,7 @@
 
 .navbar a {
      display: block;
-     padding: 8px 16 px;
+     padding: 8px 16px;
      text-decoration: none;
      color: white;
 }
