--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
     padding: 0;
     width: 200px;
     height: 100%;
+    z-index: 1;
     position: fixed;
     overflow: auto;
     background-color: #000000;
@@ -31,7 +32,7 @@
 
 .content {
      margin-left: 20%;
-     padding-left: 20px;
+     padding-left: 5px;
 }
 
 body {
