--- a/src/index.css
+++ b/src/index.css
@@ -11,15 +11,15 @@
 
 }
 
-.navbar a {
-     display: block;
+.navbar a, .dropbtn {
+     display: inline-block;
      padding: 8px 16px;
      text-decoration: none;
      color: white;
 }
 
 /* Link color on hover */
-.navbar a:hover {
+.navbar a:hover, .dropdown:hover .dropbtn {
      background-color: #ffc629;
      color: black;
 }
@@ -29,6 +29,34 @@
      background-color: #ffc629;
      color: black;
 }
+
+li.dropdown {
+     display: inline-block;
+}
+
+.dropdown-content {
+     display: none;
+     position: absolute;
+     background-color:#000000;
+     min-width: 160px;
+     z-index: 1;
+}
+
+.dropdown-content a {
+     color: white;
+     padding: 12px 16px;
+     text-decoration: none;
+     display: block;
+     text-align: left;
+}
+
+.dropdown-content a:hover {
+     background-color: #ffc629;
+}
+
+.dropdown:hover .dropdown-content {
+     display: block;
+   }
 
 .content {
      margin-left: 200px;
