--- a/src/index.css
+++ b/src/index.css
@@ -1,66 +1,68 @@
-.navbar {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    height: 100%;
-    z-index: 1;
-    position: fixed;
-    overflow: auto;
-    background-color: #000000;
+.sidenav {
+     height: 100%; /* Full Height */
+     width: 200px; /* 200px Width */
+     list-style-type: none; /* No bullets */
+     margin: 0;
+     padding: 0;
+     top: 0; /* Against top of page */
+     left: 0; /* Against far left of page */
+     padding-top: 20px; /* Extra space between words on top */
+     z-index: 1;
+     position: fixed; /* Bar does not move with page */
+     overflow: auto;
+     background-color: #000000;
 
 }
 
-.navbar a, .dropbtn {
-     display: inline-block;
-     padding: 8px 16px;
+.sidenav a, .dropdown-btn {
+     display: block;
+     padding: 6px 8px 6px 16px;
      text-decoration: none;
      color: white;
+     font-size: 20px;
+     display: block;
+     border: none;
+     width: 100%;
+     text-align: left;
+     cursor: pointer;
+     outline: none;
 }
 
 /* Link color on hover */
-.navbar a:hover, .dropdown:hover .dropbtn {
+.sidenav a:hover, .dropdown-btn:hover {
      background-color: #ffc629;
      color: black;
 }
 
-/* Link color while active */
-.navbar .active {
+/* Button color while active */
+.sidenav .active {
      background-color: #ffc629;
      color: black;
 }
 
-li.dropdown {
-     display: inline-block;
-}
-
-.dropdown-content {
+/* Style the dropdown container */
+.dropdown-container {
      display: none;
-     position: absolute;
      background-color:#000000;
-     min-width: 160px;
-     z-index: 1;
+     padding-right: 8px;
 }
 
-.dropdown-content a {
-     color: white;
-     padding: 12px 16px;
-     text-decoration: none;
-     display: block;
-     text-align: left;
+/* Style the Caret */
+.fa-caret-down {
+     float: right;
+     padding-right: 8px;
 }
 
-.dropdown-content a:hover {
-     background-color: #ffc629;
+/* Media Info */
+@media screen and (max-height: 450px) {
+     .sidenav {padding-top: 15px;}
+     .sidenav a {font-size: 18px;}
 }
-
-.dropdown:hover .dropdown-content {
-     display: block;
-   }
 
 .content {
      margin-left: 200px;
      padding-left: 30px;
+     padding: 0px 10px;
 }
 
 body {
