--- a/src/index.css
+++ b/src/index.css
@@ -53,16 +53,33 @@
      padding-right: 8px;
 }
 
-/* Media Info */
-@media screen and (max-height: 450px) {
-     .sidenav {padding-top: 15px;}
-     .sidenav a {font-size: 18px;}
+.dropdown-content {
+     display: none;
+     position: absolute;
+     background-color:#000000;
+     min-width: 160px;
+     z-index: 1;
 }
+
+.dropdown-content a {
+     color: white;
+     padding: 12px 16px;
+     text-decoration: none;
+     display: block;
+     text-align: left;
+}
+
+.dropdown-content a:hover {
+     background-color: #ffc629;
+}
+
+.dropdown:hover .dropdown-content {
+     display: block;
+   }
 
 .content {
      margin-left: 200px;
      padding-left: 30px;
-     padding: 0px 10px;
 }
 
 body {
