--- a/src/index.css
+++ b/src/index.css
@@ -54,28 +54,10 @@
      padding-right: 8px;
 }
 
-.dropdown-content {
-     display: none;
-     position: absolute;
-     background-color:#000000;
-     min-width: 160px;
-     z-index: 1;
-}
-
-.dropdown-content a {
-     color: white;
-     padding: 12px 16px;
-     text-decoration: none;
-     display: block;
-     text-align: left;
-}
-
-.dropdown-content a:hover {
-     background-color: #ffc629;
-}
-
-.dropdown:hover .dropdown-content {
-     display: block;
+   /* Some media queries for responsiveness */
+@media screen and (max-height: 450px) {
+     .sidenav {padding-top: 15px;}
+     .sidenav a {font-size: 18px;}
    }
 
 .content {
@@ -84,5 +66,5 @@
 }
 
 body {
-     font-family:Georgia, 'Times New Roman', Times, serif;
+     font-family: Georgia, 'Times New Roman', Times, serif;
 }
