--- a/src/index.css
+++ b/src/index.css
@@ -71,14 +71,15 @@ body {
 
 /* Add style to the footer*/
 .footer {
+     position: fixed;
      left: 0;
-     bottom: 0;
+     bottom: 0;     
      width: 100%;
      background-color: black;
      color: white;
      text-align: center;
 }
-        
+
 footer {
      background-color: black;
      color: white;
