Fixing Navagation Font and new page titles

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
      position: fixed; /* Bar does not move with page */
      overflow: auto;
      background-color: #000000;
+     font-family: Georgia, 'Times New Roman', Times, serif;
 
 }
 
