Search Page Corrections

--- a/src/style.css
+++ b/src/style.css
@@ -1,83 +1,101 @@
-.sidenav {
-     height: 100%; /* Full Height */
-     width: 200px; /* 200px Width */
-     list-style-type: none; /* No bullets */
-     margin: 0;
-     padding: 0;
-     top: 0; /* Against top of page */
-     left: 0; /* Against far left of page */
-     padding-top: 20px; /* Extra space between words on top */
-     z-index: 1;
-     position: fixed; /* Bar does not move with page */
-     overflow: auto;
-     background-color: #000000;
-}
 
-.sidenav a, .dropdown-btn {
-     display: block;
-     padding: 6px 8px 6px 16px;
-     text-decoration: none;
-     background: none;
-     color: white;
-     font-size: 20px;
-     display: block;
-     border: none;
-     width: 100%;
-     text-align: left;
-     cursor: pointer;
-     outline: none;
-     font-family: Georgia, 'Times New Roman', Times, serif;
-}
+/*Every Page - Navigation Bar */
+     .sidenav {
+          height: 100%; /* Full Height */
+          width: 200px; /* 200px Width */
+          list-style-type: none; /* No bullets */
+          margin: 0;
+          padding: 0;
+          top: 0; /* Against top of page */
+          left: 0; /* Against far left of page */
+          padding-top: 20px; /* Extra space between words on top */
+          z-index: 1;
+          position: fixed; /* Bar does not move with page */
+          overflow: auto;
+          background-color: #000000;
+     }
 
-/* Link color on hover */
-.sidenav a:hover, .dropdown-btn:hover {
-     background-color: #ffc629;
-     color: black;
-}
+     .sidenav a, .dropdown-btn {
+          display: block;
+          padding: 6px 8px 6px 16px;
+          text-decoration: none;
+          background: none;
+          color: white;
+          font-size: 20px;
+          display: block;
+          border: none;
+          width: 100%;
+          text-align: left;
+          cursor: pointer;
+          outline: none;
+          font-family: Georgia, 'Times New Roman', Times, serif;
+     }
 
-/* Button color while active */
-.active {
-     background-color: #ffc629;
-     color: black;
-}
+     /* Link color on hover */
+     .sidenav a:hover, .dropdown-btn:hover {
+          background-color: #ffc629;
+          color: black;
+     }
 
-/* Style the dropdown container */
-.dropdown-container {
-     display: none;
-     background-color:#000000;
-     padding-right: 8px;
-}
+     /* Button color while active */
+     .active {
+          background-color: #ffc629;
+          color: black;
+     }
 
-/* Style the Caret */
-.fa-caret-down {
-     float: right;
-     padding-right: 8px;
-}
+     /* Style the dropdown container */
+     .dropdown-container {
+          display: none;
+          background-color:#000000;
+          padding-right: 8px;
+     }
 
-   /* Some media queries for responsiveness */
-@media screen and (max-height: 450px) {
-     .sidenav {padding-top: 15px;}
-     .sidenav a {font-size: 18px;}
-   }
+     /* Style the Caret */
+     .fa-caret-down {
+          float: right;
+          padding-right: 8px;
+     }
 
-.content {
-     margin-left: 200px;
-     padding-left: 30px;
-}
+     /* Some media queries for responsiveness */
+     @media screen and (max-height: 450px) {
+          .sidenav {padding-top: 15px;}
+          .sidenav a {font-size: 18px;}
+     }
+/*End Navigation Bar */
 
-body {
-     font-family: Georgia, 'Times New Roman', Times, serif;
-}
 
-footer {
-     background-color: black;
-     color: white;
-     padding: 10px;
-     text-align: center;
-     margin-left: 200px;
-     position: absolute;
-     left: 0;
-     bottom: 0;     
-     width: 100%;
-     height: 60px;
-}
+/* Every page - Content / Body */
+     .content {
+          margin-left: 200px;
+          padding-left: 30px;
+     }
+
+     body {
+          font-family: Georgia, 'Times New Roman', Times, serif;
+     }
+/* End Content / Body */
+
+
+/* Book Search */
+/* Book List */
+     .book-list {
+          margin-top: 50px;
+          visibility: hidden; /* Hide book list until search results */
+     }
+/* End Book Search 
+
+
+/* Every Page - Footer */
+     footer {
+          background-color: black;
+          color: white;
+          padding: 10px;
+          text-align: center;
+          margin-left: 200px;
+          position: absolute;
+          left: 0;
+          bottom: 0;     
+          width: 100%;
+          height: 60px;
+     }
+/* End Footer */
