--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
+/*
+     CSS Stylesheet for Milestone Application
+     Gabrielle Hooper
+     07/05/23
+*/
+
+
 
 /*Every Page - Navigation Bar */
      .sidenav {
@@ -81,6 +88,23 @@
      .book-list {
           margin-top: 50px;
           visibility: hidden; /* Hide book list until search results */
+     }
+
+     .container {
+          font-family:Georgia, 'Times New Roman', Times, serif;
+     }
+
+     #title {
+          margin-top: 200px;
+     }
+
+     #header {
+          font-size: 3rem;
+     }
+
+     .center {
+          margin: auto;
+          margin-top: 200px;
      }
 /* End Book Search 
 
